--- a/client-for-raspberry-pi/package.json
+++ b/client-for-raspberry-pi/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "pi-camera-connect": "^0.3.4"
   }
 }
